--- a/myquote/一分钱一分货吗.md
+++ b/myquote/一分钱一分货吗.md
@@ -1,1 +1,16 @@
 
+我不相信一分钱一分货这种理论。
+信息创造价值。
+我的理论是，当你的知识全面，得到的信息足够充分的时候，便足以得到物廉价美的东西。
+你说简陋好吗？
+你可能回答不好。因为在现代都市，人作为一个行走的提款机，到哪里都必须为他准备让他消费的东西。
+喜欢精致华丽好看还是喜欢粗糙使用？
+对于大部分人的心理来说，可能答案是前者。就是觉得作为一个都市人，都市的产品是必须的。他们只是等待享受终端产品，而失去了自己动手的创造力。特别是上班族。
+应该来说，还是资源不足吧。时间和尝试是一种很宝贵的资源。
+假设一个人试过自己动手做一些东西，就可能不会对城市的产品产生太大的依赖。
+首先是动手能力。有一个词叫做能工巧匠，就是夸奖那些用简单的原材料，加工出自己需要的产品的人，自给自足。
+现在的都市人，基本不知道如何去寻找原材料，也没有好奇心去探索如何把原材料加工成产品，他们只是通过购买一些规格化的产品，来满足自己的需求。
+其实这里有几个问题。
+第一，为什么都市人失去了探索，创造的好奇心。
+第二，这是个规格化的社会，大到房屋，小到螺丝钉，都有标准的规格。这样的社会失去了多样性，创造力，以及更多的可能性？
+第三，êaa
