--- a/myquote/一分钱一分货吗.md
+++ b/myquote/一分钱一分货吗.md
@@ -1,16 +1,19 @@
-
-我不相信一分钱一分货这种理论。
-信息创造价值。
-我的理论是，当你的知识全面，得到的信息足够充分的时候，便足以得到物廉价美的东西。
-你说简陋好吗？
-你可能回答不好。因为在现代都市，人作为一个行走的提款机，到哪里都必须为他准备让他消费的东西。
-喜欢精致华丽好看还是喜欢粗糙使用？
-对于大部分人的心理来说，可能答案是前者。就是觉得作为一个都市人，都市的产品是必须的。他们只是等待享受终端产品，而失去了自己动手的创造力。特别是上班族。
-应该来说，还是资源不足吧。时间和尝试是一种很宝贵的资源。
 假设一个人试过自己动手做一些东西，就可能不会对城市的产品产生太大的依赖。
 首先是动手能力。有一个词叫做能工巧匠，就是夸奖那些用简单的原材料，加工出自己需要的产品的人，自给自足。
 现在的都市人，基本不知道如何去寻找原材料，也没有好奇心去探索如何把原材料加工成产品，他们只是通过购买一些规格化的产品，来满足自己的需求。
 其实这里有几个问题。
 第一，为什么都市人失去了探索，创造的好奇心。
 第二，这是个规格化的社会，大到房屋，小到螺丝钉，都有标准的规格。这样的社会失去了多样性，创造力，以及更多的可能性？
-第三，êaa
+第三，在这种自给自足被排挤的时代，是否就没有可能性自给自足？
+上面的问题，其实是需要去探索一下的。以时代替代个人的命运，以大家代替小家，这种是不科学的。
+其实我觉得人应该探索更多的出路，而不是寓于一角，成为一种规格化的物件。人不应该只是局限于工厂的产品，其实也可以自己探索满足自己需求的“产品”，亦或者，替代品。思考每件产品存在的价值，及其意义。比如，蚊帐这种东西，其实是因为人在睡觉的时候，被蚊子打扰的不行，发明的一种东西。那么现在，我们被蚊子咬了，我们不会想要去创造一种新的防蚊工具，只是去买现成的产品。如果我们在这个过程中，假如自己的思考，或许又有一个伟大的发明会诞生。但是遗憾的是我们的思维惯性和惰性。思维惯性就是，蚊子打扰我了，我要找某个产品去解决这个问题。习惯的往这个方向去思考问题。而不会思考我怎么创造工具去解决这个问题。这是截然不同的两种思路。惰性，体现在能用钱解决的问题，都不是问题。
+再者，是否每个人都具备了能力去创造呢，也是不一定的。
+
+那如果不具备这种创造力，还有option2，就是去买现有的产品。这个过程也有很多的问题。
+首先，符合需求的产品在哪里。需要找到拥有者对吧。然后拥有者可能是一个黑盒。因为他拥有产品的目的可能还是不一样的。作为商人，是买卖的，目的是交换盈利。所以这种产品的价格超出它的价值。工厂作为生产者，可能就是价格基本符合价值。但是站在消费者的角度，其实我们离生产者，隔了一个卖东西的。这中间一手，隐藏了多少黑幕（包括为了经济增长而故意拉升的价格，我觉得城市化的目的，并不是商品降价，而是商品拉升价格，这种对于消费者并不友好），你要为多少买单，可能你永远不知道。这种情况还是在产品是符合需求（不存在欺骗）的情况下。如果是存在欺骗，诈骗行为的，不诚信的，这种还要另算。所以，你为一件商品付出的，其实已经付出很多，包括为城市化，商人，还有一些黑幕，更坑的是花钱受罪（被欺骗买了假产品）。所以当一件东西成为商品，应该具有以下的属性。
+1、价格超过价值
+2、存在泡沫
+3、对消费者不友好
+所以，一分钱一分货这种东西，只是为了给商品经济不告人的秘密做一种掩饰。商品经济到底是什么，可能只有控制ta的，才说的清楚。
+生活在罪恶的商品世界，我们应当如何保护自己，保护自己的钱包捏？
+首先要学会自给自足。可以用原材料自己搞的东西，坚决不买（包括教育，住房等），学会辨别商品和原材料。多掌握信息的来源。在知识全面，对社会有整体认识的情况下，对购买商品做出最优解。这个要看掌握的信息是否足够，学会利用信息差。
