--- a/myquote/体验.md
+++ b/myquote/体验.md
@@ -2,3 +2,9 @@
 以前读的时候觉得懵懵懂懂，并不能理解言外之意。
 其实我们做的每一步，其实都有点难的。但是重要的是我们自己的决定。
 其实社会上还有非常多的角落，被你忽略。你看到的，也只是你眼中的社会。每个人的眼界，决定了他看到了多少东西。或者是说需求，当他需要的时候，自然会去寻找问题的答案。其实有的时候，在面对这个陌生的世界的时候，无所适从。当你尝试开始接触新东西的时候。就会产生一种应激反应。就是对自己1不知道的东西的害怕，以及产生的焦虑。还有可能是自己的期望和现实与期望之间的落差。沉迷于想象中太久，而接触现实的时候，才发现，世界并不是你想象中的那么如意。这个时候有挫败感以及心理落差。这种刺激，其实是负面的，它会导致你退缩，不敢再前进一步去探索新的东西。其实只有一直去探索，不断挑战未知，人生的1可能性才会越来越大。但是一开始接受的负面刺激，负反馈太多的话，就容易导致蜷缩在自己的世界。
+
+所以，应该到那种环境中去接受刺激，锻炼自己的对这个世界作出反应的能力。
+
+另外的一点就是机遇的问题。这个有一部分可以科学的角度来看。是概率。比如成功。
+其实很多优秀的人已经对成功给出答案了。失败是成功之母。当我们不断去尝试，然后不断出错，然后发现此路不通，那么我就换另外一条路走下去。只要试的次数足够多，那么我们就能够找到那条可行之路。但是问题是，我们可能在接受了很多的负面刺激之后我们会产生一种无力感，这么多的路，还要多久才能试完？慢慢的我们就会放弃试错，平庸的度过自己的一生。当我们走过一条错的路之后，我们就已经排除了一条不可行之路，离成功就又近了一步。
+如何正确的试错其实是个很大的问题。去探索，需要有路径，需要成本设计。
