--- a/myquote/体验.md
+++ b/myquote/体验.md
@@ -9,3 +9,5 @@
 其实很多优秀的人已经对成功给出答案了。失败是成功之母。当我们不断去尝试，然后不断出错，然后发现此路不通，那么我就换另外一条路走下去。只要试的次数足够多，那么我们就能够找到那条可行之路。但是问题是，我们可能在接受了很多的负面刺激之后我们会产生一种无力感，这么多的路，还要多久才能试完？慢慢的我们就会放弃试错，平庸的度过自己的一生。当我们走过一条错的路之后，我们就已经排除了一条不可行之路，离成功就又近了一步。
 还有的是，你应该知道，什么是路。以及如何开辟一条路。有的东西只是别人设计好的东西。但是对于你来说是有学习成本的。在这方面的胜算就不大。由于被别人制定了规则，所以你是属于被规则统治的人。你要找的，其实是按照自己的兴趣，能够借鉴其他的路，把自己的路给建出来。
 如何正确的试错其实是个很大的问题。去探索，需要有路径，需要成本设计。
+
+在你还没有成功的时候，所有的一切都只是在尝试。可能会产生各种各样的情绪。比如，希望，沮丧，患得患失，不安全感，迷茫，。最重要的是知道，你是在尝试。不要丢掉你的斗志和探索的心。如果在没有成功之前就把这些东西丢掉了，那么就永远没有机会。保持探索。
