--- a/myquote/体验.md
+++ b/myquote/体验.md
@@ -10,4 +10,4 @@
 还有的是，你应该知道，什么是路。以及如何开辟一条路。有的东西只是别人设计好的东西。但是对于你来说是有学习成本的。在这方面的胜算就不大。由于被别人制定了规则，所以你是属于被规则统治的人。你要找的，其实是按照自己的兴趣，能够借鉴其他的路，把自己的路给建出来。
 如何正确的试错其实是个很大的问题。去探索，需要有路径，需要成本设计。
 
-在你还没有成功的时候，所有的一切都只是在尝试。可能会产生各种各样的情绪。比如，希望，沮丧，患得患失，不安全感，迷茫，。最重要的是知道，你是在尝试。不要丢掉你的斗志和探索的心。如果在没有成功之前就把这些东西丢掉了，那么就永远没有机会。保持探索。
+在你还没有成功的时候，所有的一切都只是在尝试。可能会产生各种各样的情绪。比如，希望，沮丧，患得患失，不安全感，迷茫，。最重要的是知道，你是在尝试。不要丢掉你的斗志和探索的心。如果在没有成功之前就把这些东西丢掉了，那么就永远没有机会。保持探索。还有就是设计一套探索的流程，制作自己的工具，平台，收集整理，反思自己的得与失。这样会让探索之路事半功倍。逐渐积累。
