--- a/myquote/体验.md
+++ b/myquote/体验.md
@@ -11,3 +11,4 @@
 如何正确的试错其实是个很大的问题。去探索，需要有路径，需要成本设计。
 
 在你还没有成功的时候，所有的一切都只是在尝试。可能会产生各种各样的情绪。比如，希望，沮丧，患得患失，不安全感，迷茫，。最重要的是知道，你是在尝试。不要丢掉你的斗志和探索的心。如果在没有成功之前就把这些东西丢掉了，那么就永远没有机会。保持探索。还有就是设计一套探索的流程，制作自己的工具，平台，收集整理，反思自己的得与失。这样会让探索之路事半功倍。逐渐积累。
+以何种方式去应对世界的未知，以何种方式去了解世界，探索的入口点，探索的道路，这些都是需要我们探讨的问题。
