--- a/myquote/心中的曹操.md
+++ b/myquote/心中的曹操.md
@@ -1,2 +1,60 @@
 以前不喜欢曹操。
-有的人说他奸；有的人说他挟天子以令诸侯，不仁不义；有的人说他好色。三国演义里的曹操，是反面角色。由一件件事情塑造了3
+有的人说他奸；有的人说他挟天子以令诸侯，不仁不义；有的人说他好色。三国演义里的曹操，是反面角色。由一件件事情塑造了这个曹操。
+
+而真正认识这个人的时候是读他的 短歌行。
+
+
+对酒当歌，人生几何？
+
+譬如朝露，去日苦多。
+
+慨当以慷，忧思难忘。
+
+何以解忧？唯有杜康。
+
+青青子衿，悠悠我心。
+
+但为君故，沈吟至今。
+
+呦呦鹿鸣，食野之苹。
+
+我有嘉宾，鼓瑟吹笙。
+
+明明如月，何时可掇？
+
+忧从中来，不可断绝。
+
+越陌度阡，枉用相存。
+
+契阔谈宴，心念旧恩。
+
+月明星稀，乌鹊南飞，
+
+绕树三匝，何枝可依？
+
+山不厌高，海不厌深。
+
+周公吐哺，天下归心。
+
+
+观沧海
+
+东临碣石，以观沧海。
+
+水何澹澹，山岛竦峙。
+
+树木丛生，百草丰茂。
+
+秋风萧瑟，洪波涌起。
+
+日月之行，若出其中；
+
+星汉灿烂，若出其里。
+
+幸甚至哉！歌以咏志。
+
+其实他写到了自己在建立事业的
+过程中的一种感慨。从他的诗词里，丝毫没有小人之心，反而是一种大气魄，气象宏大的感觉。所以，曹操应该不是奸险小人。
+在政治斗争中，必定要维护自己的地盘，以及根基。如果连自己的地盘都保护不了，那么就不用说建立事业了。所以，政治家，一定有自己的准则，他自己的全局设计，筹划，战略。好的政治家，是艺术家。他的手段会很巧妙。不是一种自私的心理，而是一种非凡伟大的战略，是综合了一个人的胆识，眼光，纵横，口才，个人魅力，影响力，等等各个方面的一种智慧。只有在这种人的设计的框架之下，这盘棋，才能具有大格局，大气象。
+三国之中，魏国是最强的。我觉得，这个和曹操这个人是分不开关系的。他所缔造的框架，和个人决心，有关。
+
