--- a/myquote/成功法则.md
+++ b/myquote/成功法则.md
@@ -1,1 +1,2 @@
 
+当你在寻找出路，但是又貌似在原地踏步。路走着走着，好像容易忘记方向。真是一件悲哀的事情。好久没有感受到成功的感觉了。其实这种感觉很重要。摸索的时候，方向是否准确，其实是靠这个来判断的。如果，一直觉得不顺利，我觉得，这条路其实是可以放弃的。但是，你放弃时候，应该走哪条路呢？其实我一直都没有找到问题的所在。没有抓到核心的问题。或许也没有核心的问题。
