--- a/myquote/成功法则.md
+++ b/myquote/成功法则.md
@@ -1,2 +1,6 @@
 
 当你在寻找出路，但是又貌似在原地踏步。路走着走着，好像容易忘记方向。真是一件悲哀的事情。好久没有感受到成功的感觉了。其实这种感觉很重要。摸索的时候，方向是否准确，其实是靠这个来判断的。如果，一直觉得不顺利，我觉得，这条路其实是可以放弃的。但是，你放弃时候，应该走哪条路呢？其实我一直都没有找到问题的所在。没有抓到核心的问题。或许也没有核心的问题。
+
+可能现在更多的是一种空荡荡的感觉。一种孤独，无助，迷茫。像一只被关进了玻璃瓶的密封。随处可见的景色，但是却永远隔着一层玻璃。可能会追求突破，但是，突破口在哪里呢？不知道。随处看去，到处都是人。但是你的内心里面，只有一个自己，以及你的希望，渴望，盼望。可能知道，什么样的世界，是合理的，但是你发现这个世界很多都是不合理的。人与人之间，其实隔着冷漠。你可能永远都不愿意去透过这层冷漠，去看看这背后的人。世界上的道德，束手缚脚。可能来来往往的人，根本就和你没有什么交集。只是来往而已。但是有些东西，就像一颗石子，会掉在心中平静的湖水里，荡开许多涟漪。但是如果还是没有交集，那么涟漪过后，慢慢就会趋于平静。又如似水一般。这种平静，平淡而无为的生活。于是很多的石子让你的水面一次又一次起涟漪，但是却装作波澜不惊。其实你可能没有那么淡定。
+有的时候会去整理一下自己。
+ 
