--- a/myquote/大道之行.md
+++ b/myquote/大道之行.md
@@ -1,1 +1,36 @@
+me：其實人都有防備的心裡吧。現在相信二字也很難寫了
+she：我們這裡沒那麼嚴重，只要一個身位距離不會後退的。有些知道半個身位也不退。這個西安女孩太誇張，不到兩人身位，地點還在車站就逃命了。
+me：現在的心裡距離比較遠，社交，包括人格。我覺得是時代，社會的原因。工業化時代，人的異化。
+she：這我認同，就看哪些人比較嚴重。冒犯的說一句，大陸這方面很嚴重。這關乎到文革破四舊所造成的後遺症嗎？很多傳統文化都當老物件給淘汰，越來越西式，可西式到頭也學不全
+me：我對這方面也感興趣，我自己想過。1、人格不健全2、社會的原因，拜金主義，3、人沒有獨立的思想，素質低。沒有獨立的思想和人格，我覺得是一種悲哀
+she：看上海costco，鄭州ikea的瘋狂，豬肉購買的情況。costco步amanzon後塵，被瘋狂退會員[捂脸]遲早會被玩壞了。
+me：有可能，有點短視
+she：時代進步，人越精明越不容易信任人，這是全球都在面臨的事情。就如以前我晚上在家大門的不鎖的，開著和鄰居拉家常，有煮特別的東西給隔壁送上一碗，家庭情況互相知道
+she：十年後，實話說我不單關了大門不常開，隔壁姓甚麼都不知道。只混了個臉熟。這個是住我隔壁的，聊個幾句各回各家
 
+me：无脑的人太多，被人卖了还帮人数钱
+me：我比較在意人，生存狀態，精神面貌，人與人的關係，人與社會的關係，以及與經濟的關聯，造成這些背後的原因。。。
+she：打個比喻，就2017年北京新建村事件，外網很多人只關注到租戶問題，沒探究根本原因。你說他們錯了嗎？他們入眼的關注點沒錯。你說國家錯了嗎？我個人覺得政府也沒錯。
+me：為什麼不探究一下，為什麼有這個問題的產生？這才是深層次的問題。你看到的，只是表層。
+she：探究了，現代人行為都與環境/圈子/利益有關。造成這樣的因素往精神面深究，最終都會落回現實面
+me：僅僅從事件分析，是沒有意義的
+she：那你分享應該是怎樣的流程分析比較理想，我是以事件入精神
+me：我覺得是設計者的問題。不科學的設計，決策層的無能，並且短視，功利，導致這樣的問題。
+she：我會比較傾向去瞭解為何
+me：如果這種問題僅僅出現幾次，我覺得問題不大，但是，問題經常出現，就說明，有根本的問題，還有以前可能積累了很多問題
+me：設計的不科學，是以人為代價的。用人力去彌補這種失誤，為這種設計買單。
+me：大道之行也，天下为公，选贤与能，讲信修睦，故人不独亲其亲，不独子其子，使老有所终，壮有所用，幼有所长，鳏寡孤独废疾者皆有所养；男有分，女有归。货恶其弃于地也，不必藏于己；力恶其不出于身也，不必为己，是故谋闭而不兴，盗窃乱贼而不作，故外户而不闭，是谓大同。
+me：只有執政者 天下為公，沒有私心，科學治國，才有可能 大道之行。不顧人民的飯碗，把人當成工具，遲早會失去民心的。
+
+me：抛个话题，你对这个怎么看？
+https://mp.weixin.qq.com/s/UBvpZPXNdoIbhNjECfXemw
+she：文章很好，說到了傳統華人必需轉型的重點。其實有沒有想過，西方古早的時候也是養兒防老的情況，只因他們走的快才會產生父母只負責孩子到成年，成年後就不管了
+me：我有感觸，但是以我現在的能力，還不能分析到深層次的東西。
+she：這種領悟我在香港反送中上學到的。社會意識形態隨著發展而改變風氣
+me：我覺得這種人的人格其實有問題，那個女的。思想也不成熟，三觀不正
+she：若干年後當中國的華人轉型了，比中國更傳統的地方就入今日中國看美國一樣看待中國。我也覺得媳婦問題很大。想要中國式父母的待遇就該負起中國式兒女的責任。想要美國式的自由和只為自己負責，就該跟美國青年那樣負責到底。
+me：我覺得他們沒有界限感
+she：有這體現，這也是華人的弊病之一
+me：以及缺失很多東西。比如教養，對人的尊重，自己對自己負責任等
+she：長輩對於小輩經常犯這老毛病。我有個香港朋友30多歲了，還是媽寶。學位讀了一個又一個，看成績人是優秀的，看整體....應該很難娶媳婦。因為需要培養的東西都被父母給決定了
+she：每個華人都有這種情況，就我這裡也遇到一個很好笑的例子。我公司有個門店頂了給人，那是一位年輕人，30歲結婚有孩子。交收好後，我們正準備離去，聽到他問他爸爸：爸，我車的大鏡裂了，怎麼辦？我的表情就是這樣🙄[捂脸]
