--- a/myquote/大道之行.md
+++ b/myquote/大道之行.md
@@ -7,8 +7,21 @@ she：看上海costco，鄭州ikea的瘋狂，豬肉購買的情況。costco步a
 me：有可能，有點短視
 she：時代進步，人越精明越不容易信任人，這是全球都在面臨的事情。就如以前我晚上在家大門的不鎖的，開著和鄰居拉家常，有煮特別的東西給隔壁送上一碗，家庭情況互相知道
 she：十年後，實話說我不單關了大門不常開，隔壁姓甚麼都不知道。只混了個臉熟。這個是住我隔壁的，聊個幾句各回各家
+me：你了解一下，小孩，年輕人，他們的志趣，以及周圍環境的影響就知道了。手機，抖音，快手，小紅書，
+she：小孩比成人更功利，都長壞了。很明顯的你看馬來西亞youtuber全都1x-2x，天天用香港事件宣傳愛中國思想。這能騙騙大陸人，我們一看就知道他們想因為這事件蹭熱度再進軍bilibili🙄，搞到香港人都以為馬來西亞人全粉紅🙄。
+me：无脑的人太多，被人卖了还帮人数钱。人人自私自利不是什麼好結果。
+she：他們對於時事確實有見解和立場，實話說我就不信他們對中國感情有那麼深。宣傳力度比真正的大陸人還高。東西太過就假了
+me：對自己的命運，自己的價值，自己的了解，我覺得這些東西才是有意義的事情。很多人都在做徒勞無功的事情。追求的到最後只是竹籃打水。
+me：人像極了流水線生產出來的工具。只有一種價值觀。統一的價值，這很可怕。意味著有的東西，人的多樣性會被否定掉。結局只是一個工具，而不是一個人
+she：在他們眼中現在的年齡不是塑造自我的時期，而是拼命賺錢的時期。可我認為塑造自我體現在日常無時無刻中，人應當有底線有容忍有骨氣。這都是我們的老祖宗教導的。不義之財非吾有也，不孝之子非吾子也。用香港事件一面倒的宣揚愛國主義，基本是啃人血饅頭。有對的需要宣揚，有錯的也要批評。這才是人生為而且為人該有的體現
+she：重點在於他們不是中國人[捂脸]這一面倒的為了甚麼呢？我只想到為了進軍大陸自媒體市場，或者自媒體市場轉戰影視市場。
+me：時間證明一切，馬來也是紅色政權8？
+she：我們不是社會主義，也不是紅色政權。因為人民政治冷感才會在有雙普選的政治環境被一個政黨執政60年。[嘿哈]投票的時候不是不出現，不登記作選民，就是在問路人你投甚麼吖，跟著投。這不需要請教吖，我自己馬來西亞的事情我清楚。十年前我都未登記過作選民。
+me：人有的時候冷漠自私，結果社會就變成這樣了
+she：我相信，平心論有不少值得愛的地方
+me：我覺得我們的關注點不同
 
-me：无脑的人太多，被人卖了还帮人数钱
+she：看書的人說一句話很實在。一千個人看同一本書就有一千個不同的哈雷姆特。關注點不同很正常，善惡不同就很大問題。
 me：我比較在意人，生存狀態，精神面貌，人與人的關係，人與社會的關係，以及與經濟的關聯，造成這些背後的原因。。。
 she：打個比喻，就2017年北京新建村事件，外網很多人只關注到租戶問題，沒探究根本原因。你說他們錯了嗎？他們入眼的關注點沒錯。你說國家錯了嗎？我個人覺得政府也沒錯。
 me：為什麼不探究一下，為什麼有這個問題的產生？這才是深層次的問題。你看到的，只是表層。
