--- a/整理人生/20190917.md
+++ b/整理人生/20190917.md
@@ -1,1 +1,17 @@
 
+今天的感悟和收获，以及下一步的行动。
+则一
+
+了解未知的群体
+
+走进另外一个群体的生活，了解他们，比如司机，家庭主妇。他们思考和关注的东西是什么。如何生活？如何谋生？对什么比较敏感？家庭主妇可能对小钱比较敏感，对生活经验比较有心得。比如哪里的东西比较便宜实惠，可以去哪里买菜，哪里开了一家生鲜超市。有些钱大妈，可能我都没有听说过的生鲜超市，可能她们已经用了很久了。如何融入他们，以及向他们学习，了解到资讯。
+还有一点是，和另外一个未知群体的生活能力，是很厉害的。
+
+
+则二
+
+世间有太多无奈与绝望，有希望的人，还是幸福的
+
+桥底下有个摆地摊卖百香果的中年妇女。她就一袋百香果，一个米袋豁口，露出百香果。貌似不是很多人和她买，她手里捏着一把散钱，估计是今天早上卖出所得。不过并没有喜悦的笑容，只是有点愁容。后来三点多回来的时候，发现她还在那里。她坐在混凝土的凸起上，后面是一堵墙。仿佛她整个人都要往后面靠。显得她更加小了。而她的表情，却让我觉得有点绝望和悲伤。她那种感觉是苦到无人诉说的那种感觉。苦闷。仿佛找不到出路。可能手里的钱是她唯一的出路。
+有时候，我会油然生出一种希望之感。突然就觉得这中年妇女很可怜。我觉得我挺幸运了，还能生出希望的感觉。
+其实有的时候，老人，他们的寄托，希望，可能很少。特别是在一种比较贫穷的家庭。可能他们的生活艰苦。在发觉自己在衰老，开始有些病痛；有些不能照顾自己；开始有些寂寞；甚至可能害怕。当他们被孤独和寂寞侵蚀，可能他的内心就充满了恐惧感。对未来的一种绝望和无奈。就像在做一场噩梦。现实，是噩梦的延续。摸去，感觉也是空空。不知道一生为了什么而活。一切空空。没有了一点希冀。我有的时候，一觉醒来，有一种绝望的情绪。一种孤独感。空虚。后来慢慢的好了，我可以接触到其他的东西，有其他的东西来抚慰我的心。但是老人不同。貌似属于他们的是冰冰凉的一张床，一堵墙。被生活抛弃。偶尔生活有一点涟漪。比如孙子回来了。但是最大的问题在于孙子，其实也并没有那么孝顺。不走心。不了解老人需要的是什么。没人去走近她。寂寞，毫无希冀。可能有点点想要被关怀的渴望，可能也不被理解。甚至在身边的还可能是敌人。并不能说心里话。
